--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-    "name": "V2Ray VLess",
+    "name": "VLess",
     "description": "Deploy V2ray VLess on Heroku.",
     "keywords": ["VLESS"],
     "env": {
         "ID": {
             "description": "VLESS ID",
-            "value": "1309c705-61ff-47d3-bab9-67a377e403db"
+            "value": "7309c705-61ff-47d3-bab3-67a377e403ds"
         }
     },
-    "repository": "https://github.com/DanyTPG/heroku-vless",
+    "repository": "https://github.com/nxcje/dfertiue67",
     "stack": "container"
 }
